# chat-app

./: .env  Cargo.toml  encryptedapp.db  note.txt
blockchain/: Cargo.toml
blockchain/src/: token_balance.rs
entity/: Cargo.toml
entity/src/entities/: mod.rs  prelude.rs  users.rs
migration/src/: lib.rs  m20240312_144152_user_table_constraint.rs  m20240316_053714_remove_constraint.rs  m20240316_094538_remove_constraints.rs
src/: error.rs  get_message.rs  lib.rs  login.rs  main.rs  register.rs  types.rs  user_search.rs  websocket.rs
src/api/: get_message.rs  get_message_on_bootstrap.rs  mod.rs  send_message.rs  types.rs  updateStatus.rs  user_search.rs  websocket.rs
src/api/auth/: login.rs  register.rs
src/api/blockchain/: mod.rs  token.rs  transaction.rs
src/auth/: login.rs  mod.rs  register.rs
src/db/: mod.rs  schema.rs
src/db/surreal/: schema.rs
src/net/: mod.rs
src/types/: message.rs  mod.rs  user.rs
